--- a/style.css
+++ b/style.css
@@ -59,3 +59,62 @@ h3{
 .btn:focus{
     outline:0;
 }
+
+.loginContainer {
+    border-bottom: 1px solid #efefef;
+    margin:10px;
+    padding-bottom: 10px;
+    width: 260px;
+}
+
+.passwordContainer{
+    border-bottom: 1px solid #efefef;
+    margin:10px;
+    padding-bottom: 10px;
+    width: 260px;
+}
+
+.submitContainer{
+    border-bottom: 1px solid #efefef;
+    margin:10px;
+    padding-bottom: 10px;
+    width: 260px;
+}
+
+.log .pass{
+    float: left;
+    width: 100px;
+    text-align: right;
+    padding-right: right;
+}
+
+#submitContainer{
+    color: #4444;
+    text-shadow: 0px 1px 1px rgb(140, 145, 141);
+    border-bottom: 2px solid #726e6e;
+    background-color: #b9e4e3;
+    background-color:#beeae9;
+    background: -webkit-gradient(linear, left top, left bottom, from(#beeae9), to (#a8cfce));
+    background: -moz-linear-gradient(top, #beeae9, #a8cfce);
+    background: -o-linear-gradient(top, #beeae9, #a8cfce);
+    background: -ms-linear-gradient(top, #beeae9, #a8cfce);
+}
+
+#submitContainer:hover{
+    color: #333333;
+    border: 1px solid #a4a4a4;
+    border-top: 2px solid #b2b2b2;
+    background-color: #40dbc4;
+    background: -webkit-gradient(linear left top, left bottom, from(#a8cfce), to (#beeae9));
+    background: -moz-linear-gradient(top,#a8cfce, #beeae9);
+    background: -ms-linear-gradient(top,#a8cfce, #beeae9);
+    background: -o-linear-gradient(top,#a8cfce, #beeae9);
+}
+
+.signin{
+    width: 350px;
+    border:1px solid #dcdcdc;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: left;
+}
